--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,7 +18,7 @@
 
 [colors]
 background = #282A2E
-background-alt = #373B41
+background-alt = #4f4f4f
 foreground = #C5C8C6
 primary = #F0C674
 secondary = #8ABEB7
@@ -27,8 +27,9 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 15pt
+height = 13pt
 radius = 1
+top = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -39,15 +40,16 @@ border-color = #00000000
 
 padding-left = 0
 padding-right = 1
-module-margin = 1
+module-margin = 1px
 
-font-0 = JetBrainsMono:size=11;3
-font-1 = HackNerdFont:size=16;3
+separator = "|"
 
-fixed-center = no
-modules-left = xworkspaces
-modules-center = pp ppp pn sp pt
-modules-right = tray sp pulseaudio backlight xkeyboard sp memory cpu temp sp wgactive wlan sp battery sp date
+font-0 = monospace:size=13;3
+font-1 = HackNerdFont:size=13;3
+
+fixed-center = yes
+modules-left = power xworkspaces window
+modules-right = pp ppp pn pt audio brightness memory cpu battery xkeyboard network wireguard date notify tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -59,140 +61,126 @@ type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-active-padding = 5px
 
 label-occupied = %name%
-label-occupied-padding = 1
+label-occupied-padding = 5px
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+label-urgent-padding = 5px
 
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+label-empty-padding = 5px
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:35:%
-
-[module/sp]
-type = custom/text
-content = "|"
-
-[module/backlight]
-type = internal/backlight
-card = intel_backlight
-use-actual-brightness = true
+[module/window]
+type = custom/script
+exec = ~/.config/polybar/scripts/window
 format = <label>
-label = %percentage%%
-interval = 0
+tail = true
+label = %output%
+label-padding = 1
 
-[module/pulseaudio]
-type = internal/pulseaudio
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-label-volume = %percentage%%
-label-muted = %percentage%%
-label-muted-foreground = ${colors.disabled}
-interval = 0.01
+[module/brightness]
+type = custom/script
+exec = ~/.config/polybar/scripts/brightness
+label = %output%
+interval = 1
+scroll-up = ~/.config/polybar/scripts/brightness 2
+scroll-down = ~/.config/polybar/scripts/brightness 3
+
+[module/audio]
+type = custom/script
+exec = ~/.config/polybar/scripts/audio
+interval = 1
+click-left = ~/.config/polybar/scripts/audio 1
+click-right = pavucontrol
+scroll-up = ~/.config/polybar/scripts/audio 2
+scroll-down = ~/.config/polybar/scripts/audio 3
 
 [module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+type = custom/script
+exec = ~/.config/polybar/scripts/layoutkb
+interval = 1
+label = %output%
 
 [module/memory]
-type = internal/memory
-interval = 1
-label = %used%
+type = custom/script
+exec = ~/.config/polybar/scripts/memory
+label=%output%
+interval = 2
+
+[module/power]
+type = custom/text
+click-left = wlogout
+label =  
+label-padding = 7px
 
 [module/cpu]
-type = internal/cpu
+type = custom/script
+exec = ~/.config/polybar/scripts/cpu
+label=%output%
 interval = 1
-label = %percentage:2%%
-
-[module/wlan]
-type = internal/network
-interface-type = wireless
-format-connected = <label-connected>
-label-connected = %essid%
-label-disconnected = dN
-interval = 0.5
-
-[module/lan]
-type = internal/network
-interface-type = wired
-interval = 1.0
-label-connected = %{F#F0C674}%local_ip%
 
 [module/battery]
-type = internal/battery
-label-charging = C %percentage%% %consumption%W
-label-discharging = %percentage%% %time% 
-format-low-foreground = ${colors.alert}
-format-low = <label-low>
-time-format = %H:%M
-label-low = %percentage%% %time%
-battery = BAT0
-low-at = 35
-adapter = ADP1
-poll-interval = 1
-interval = 1
+type = custom/script
+exec = ~/.config/polybar/scripts/battery
+label = %output%
+interval = 3
 
+[module/notify]
+type = custom/script
+exec = ~/.config/polybar/scripts/notify
+interval = 5
+click-left = ~/.config/polybar/scripts/notify 1
+click-right = ~/.config/polybar/scripts/notify 2
+
+[module/network]
+type = custom/script
+exec = ~/.config/polybar/scripts/network
+interval = 3
 
 [module/date]
-type = internal/date
-interval = 1
-date = %d/%m/%Y %H:%M:%S
-label = %date%
-label-foreground = ${colors.primary}
+type = custom/script
+exec = ~/.config/polybar/scripts/datetime
+label=%output%
+click-left = ~/.config/polybar/scripts/weather
+interval = 10
 
 [module/tray]
 type = internal/tray
 format-margin = 0px
-tray-spacing = 12px
-
-[module/temp]
-type = custom/script
-exec = ~/.config/polybar/scripts/core_temp
-label = %output%
-format = <label>
-interval = 1.5
+tray-spacing = 10px
 
 [module/pp]
 type = custom/text
-content = 
+label = 
 click-left = ~/.config/polybar/scripts/polyplayer previous
 
 [module/pn]
 type = custom/text
-content = 
+label = 
 click-left = ~/.config/polybar/scripts/polyplayer next
 
 [module/ppp]
 type = custom/script
-interval = 0.2
+interval = 2
 exec = ~/.config/polybar/scripts/polyplayer play_pause
 click-left = ~/.config/polybar/scripts/polyplayer play-pause
 
 [module/pt]
 type = custom/script
-interval = 1
-exec = ~/.config/polybar/scripts/polyplayer title
+exec = ~/.config/polybar/scripts/playertitle
 format = <label>
-label = %output:30:30%
+tail = true
+label = %output%
+label-padding = 10px
 
-[module/wgactive]
+[module/wireguard]
 type = custom/script
-exec = ~/.config/polybar/scripts/wgactive
-interval = 2
+exec = ~/.config/polybar/scripts/wireguard
+interval = 5
 
 [settings]
 screenchange-reload = true
