--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -19,7 +19,7 @@
 [colors]
 background = #282A2E
 background-alt = #4f4f4f
-foreground = #C5C8C6
+foreground =#fffae0
 primary = #F0C674
 secondary = #8ABEB7
 alert = #BE0000
@@ -27,7 +27,7 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 13pt
+height = 14pt
 radius = 1
 top = true
 
@@ -40,19 +40,20 @@ border-color = #00000000
 
 padding-left = 0
 padding-right = 1
-module-margin = 1px
+module-margin = 0px
 
-separator = "|"
+separator = ""
 
-font-0 = monospace:size=13;3
-font-1 = HackNerdFont:size=13;3
+font-0 = JetBrains Mono:size=11;3
+font-1 = HackNerdFont:size=12;3
 
 fixed-center = yes
+modules-center = date
 modules-left = power xworkspaces window
-modules-right = pp ppp pn pt audio brightness memory cpu battery xkeyboard network wireguard date notify tray
+modules-right = pp ppp pn audio micro brightness xkeyboard memory cpu battery network wireguard notify tray
 
 cursor-click = pointer
-cursor-scroll = ns-resize
+cursor-scroll = pointer
 
 enable-ipc = true
 
@@ -70,34 +71,38 @@ label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 5px
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 5px
-
 [module/window]
 type = custom/script
 exec = ~/.config/polybar/scripts/window
 format = <label>
 tail = true
 label = %output%
-label-padding = 1
 
 [module/brightness]
 type = custom/script
 exec = ~/.config/polybar/scripts/brightness
+scroll-up = ~/.config/i3/scripts/brightness 1
+scroll-down = ~/.config/i3/scripts/brightness -1
 label = %output%
 interval = 1
-scroll-up = ~/.config/polybar/scripts/brightness 2
-scroll-down = ~/.config/polybar/scripts/brightness 3
 
 [module/audio]
 type = custom/script
 exec = ~/.config/polybar/scripts/audio
 interval = 1
-click-left = ~/.config/polybar/scripts/audio 1
+scroll-up = ~/.config/i3/scripts/audio speaker 1
+scroll-down = ~/.config/i3/scripts/audio speaker -1
+click-left = ~/.config/i3/scripts/audio speaker 0
 click-right = pavucontrol
-scroll-up = ~/.config/polybar/scripts/audio 2
-scroll-down = ~/.config/polybar/scripts/audio 3
+
+[module/micro]
+type = custom/script
+exec = ~/.config/polybar/scripts/micro
+interval = 1
+scroll-up = ~/.config/i3/scripts/audio micro 1
+scroll-down = ~/.config/i3/scripts/audio micro -1
+click-left = ~/.config/i3/scripts/audio micro 0
+click-right = pavucontrol
 
 [module/xkeyboard]
 type = custom/script
@@ -109,12 +114,12 @@ label = %output%
 type = custom/script
 exec = ~/.config/polybar/scripts/memory
 label=%output%
-interval = 2
+interval = 0.1
 
 [module/power]
 type = custom/text
-click-left = wlogout
-label =  
+click-left = ~/.config/rofi/powermenu
+label = 
 label-padding = 7px
 
 [module/cpu]
