--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,27 +16,16 @@
 ;
 ;==========================================================
 
-[colors]
-background = #282A2E
-background-alt = #4f4f4f
-foreground =#fffae0
-primary = #F0C674
-secondary = #8ABEB7
-alert = #BE0000
-disabled = #707880
+include-file = ./colors.ini
 
 [bar/example]
 width = 100%
-height = 14pt
-radius = 1
+height = 17px
+radius = 0
 top = true
 
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-border-size = 0pt
-border-color = #00000000
+background = ${colors.bg}
+foreground = ${colors.fg}
 
 padding-left = 0
 padding-right = 1
@@ -44,13 +33,13 @@ module-margin = 0px
 
 separator = ""
 
-font-0 = JetBrains Mono:size=11;3
-font-1 = HackNerdFont:size=12;3
+font-0 = JetBrains Mono:size=12;3
+font-1 = HackNerdFont:size=13;3
 
 fixed-center = yes
 modules-center = date
-modules-left = power xworkspaces window
-modules-right = pp ppp pn audio micro brightness xkeyboard memory cpu battery network wireguard notify tray
+modules-left = power xworkspaces maximize scratchpad window
+modules-right = pp ppp pn audio micro brightness xkeyboard memory cpu cputemp battery network wireguard notify tray
 
 cursor-click = pointer
 cursor-scroll = pointer
@@ -61,7 +50,7 @@ enable-ipc = true
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.bg-alt}
 label-active-padding = 5px
 
 label-occupied = %name%
@@ -71,12 +60,20 @@ label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 5px
 
+[module/scratchpad]
+type = custom/text
+label = 󱂬 
+click-left = i3-msg move scratchpad
+click-right = i3-msg floating toggle
+
 [module/window]
 type = custom/script
 exec = ~/.config/polybar/scripts/window
 format = <label>
 tail = true
 label = %output%
+click-right = ~/.config/rofi/windows
+click-left = ~/.config/rofi/launcher
 
 [module/brightness]
 type = custom/script
@@ -107,24 +104,31 @@ click-right = pavucontrol
 [module/xkeyboard]
 type = custom/script
 exec = ~/.config/polybar/scripts/layoutkb
-interval = 1
+interval = 0.2
 label = %output%
 
 [module/memory]
 type = custom/script
 exec = ~/.config/polybar/scripts/memory
 label=%output%
-interval = 0.1
+interval = 1
 
 [module/power]
 type = custom/text
 click-left = ~/.config/rofi/powermenu
-label = 
+label = 󰣇
 label-padding = 7px
 
 [module/cpu]
 type = custom/script
 exec = ~/.config/polybar/scripts/cpu
+label=%output%
+interval = 1
+format-foreground = ${colors.system}
+
+[module/cputemp]
+type = custom/script
+exec = ~/.config/polybar/scripts/cputemp
 label=%output%
 interval = 1
 
